--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,16 @@
 {
   "name": "be-the-hero",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Diego Mais",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.20.13",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
