--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,11 @@
 {
   "name": "be-the-hero",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "author": "Diego Mais",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "nodemon src/server.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.2.3",
     "nodemon": "^2.0.2",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
