--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
