--- a/mobile/app.json
+++ b/mobile/app.json
@@ -4,7 +4,11 @@
     "slug": "be-the-hero",
     "privacy": "public",
     "sdkVersion": "36.0.0",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,9 +20,13 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "Be The Hero is a project that aims to connect people interested in helping NGOs with open campaigns.",
+    "githubUrl": "https://github.com/diegomais/be-the-hero"
   }
 }
