--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ master ]
     paths:
-    - 'api/**'
+    - 'packages/api/**'
   pull_request:
     branches: [ master ]
     paths:
-    - 'api/**'
+    - 'packages/api/**'
   workflow_dispatch:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-18.04
     
     env:
-      working-directory: api
+      working-directory: packages/api
 
     strategy:
       matrix:
