--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,28 @@
 # production
 /build
 
-# misc
+# macOS
 .DS_Store
+
+# misc
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+environment.js
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# expo
+.expo/*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+web-report/
