--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,16 +22,16 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.2.3",
-    "nodemon": "^2.0.2",
-    "prettier": "^2.0.2",
-    "supertest": "^4.0.2"
+    "dotenv": "8.2.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.1.0",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jest": "23.8.2",
+    "eslint-plugin-prettier": "3.1.2",
+    "jest": "25.2.3",
+    "nodemon": "2.0.2",
+    "prettier": "2.0.2",
+    "supertest": "4.0.2"
   }
 }
