--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,38 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+**/node_modules
+**/.pnp
+**/.pnp.js
 
 # testing
-/coverage
+**/coverage
 
 # production
-/build
+**/build
 
 # macOS
-.DS_Store
+**/.DS_Store
 
 # misc
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-environment.js
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+**/environment.js
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
 
 # expo
-.expo/*
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
-web-report/
+**/.expo/*
+**/npm-debug.*
+**/*.jks
+**/*.p8
+**/*.p12
+**/*.key
+**/*.mobileprovision
+**/*.orig.*
+**/web-build/
+**/web-report/
