--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -12,23 +12,23 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
-    "expo": "~36.0.0",
-    "expo-constants": "^10.1.0",
-    "expo-mail-composer": "^8.4.0",
+    "expo": "^40.0.0",
+    "expo-constants": "~9.3.3",
+    "expo-mail-composer": "~9.0.0",
     "intl": "^1.2.5",
-    "react": "~16.14.0",
-    "react-dom": "~16.14.0",
-    "react-native": "0.62.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "3.1.0",
-    "react-native-web": "~0.15.0"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "7.13.15",
+    "@babel/core": "~7.9.0",
     "babel-eslint": "10.1.0",
-    "babel-preset-expo": "8.0.0",
+    "babel-preset-expo": "8.3.0",
     "eslint": "7.24.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-prettier": "6.10.1",
