--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -26,7 +26,7 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "7.14.0",
     "babel-eslint": "10.1.0",
     "babel-preset-expo": "8.3.0",
     "eslint": "7.24.0",
