--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "format": "prettier .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
+    "test": "jest",
+    "test-all": "yarn lint && yarn type-check && yarn test",
     "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
@@ -16,13 +18,19 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.23.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "jest-watch-typeahead": "^0.6.3",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   }
