--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,9 @@ services:
     build:
       context: ./packages/frontend
       target: deps
+    container_name: be-the-hero_frontend
+    environment:
+      NEXT_PUBLIC_API_URL: http://localhost:3333
     ports:
       - 3000:3000
     restart: unless-stopped
