--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/main.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,36 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.3",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
-    "expo": "^40.0.0",
-    "expo-constants": "~9.3.3",
-    "expo-mail-composer": "~9.0.0",
+    "expo": "~41.0.1",
+    "expo-constants": "~10.1.3",
+    "expo-mail-composer": "~10.1.2",
+    "expo-status-bar": "~1.0.4",
     "intl": "^1.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.18.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "7.14.0",
-    "babel-eslint": "10.1.0",
-    "babel-preset-expo": "8.3.0",
-    "eslint": "7.25.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "6.15.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "2.5.1",
-    "prettier": "2.2.1"
+    "@babel/core": "^7.9.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "typescript": "~4.0.0"
   },
   "private": false
 }
