--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
+    "@types/react": "16.14.6",
     "@types/react-native": "~0.63.2",
     "typescript": "~4.0.0"
   },
