--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,28 +13,28 @@
     "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "0.21.1",
     "next": "10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "4.2.0"
   },
   "devDependencies": {
     "@testing-library/react": "11.2.7",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "26.0.23",
     "@types/node": "15.3.1",
-    "@types/react": "^17.0.4",
+    "@types/react": "17.0.4",
     "@typescript-eslint/eslint-plugin": "4.24.0",
     "@typescript-eslint/parser": "4.24.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "26.6.3",
     "eslint": "7.26.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-watch-typeahead": "^0.6.3",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.6.3",
+    "jest-watch-typeahead": "0.6.3",
     "prettier": "2.3.0",
-    "typescript": "^4.2.4"
+    "typescript": "4.2.4"
   }
 }
