--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -27,10 +27,10 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "7.14.0",
     "@types/react": "16.14.6",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@types/react-native": "0.63.52",
+    "typescript": "4.0.7"
   },
   "private": false
 }
