--- a/.github/workflows/mobile-publish.yml
+++ b/.github/workflows/mobile-publish.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
     paths:
-    - 'packages/mobile/**'
+    - 'mobile/**'
   workflow_dispatch:
 jobs:
   publish:
@@ -12,7 +12,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: packages/mobile
+        working-directory: mobile
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
