--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  ignore = "git diff --quiet HEAD^ HEAD packages/api/ packages/mobile/"
+  ignore = "git diff --quiet HEAD^ HEAD packages/api/ mobile/"
