--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,16 +3,16 @@ version: '3.8'
 services:
   api:
     build:
-      context: ./packages/api
+      context: ./backend
       dockerfile: Dockerfile
-    container_name: be-the-hero_api
+    container_name: be-the-hero_backend
     depends_on:
       - postgres
     ports:
       - 3333:3333
     restart: unless-stopped
     volumes:
-      - ./packages/api/:/app/
+      - ./backend/:/app/
       - /app/node_modules/
 
   frontend:
