--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_API_URL=http://localhost:3333
+NEXT_PUBLIC_SENTRY_DSN=
+SENTRY_AUTH_TOKEN=
+SENTRY_ORG=
+SENTRY_PROJECT=
+SENTRY_URL=https://sentry.io/
