--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
+    "@sentry/nextjs": "^6.4.1",
     "axios": "0.21.1",
     "next": "10.2.3",
     "react": "17.0.2",
