--- a/backend/package.json
+++ b/backend/package.json
@@ -30,8 +30,14 @@
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-prettier": "3.4.0",
     "jest": "26.6.3",
+    "jest-sonar-reporter": "^2.0.0",
     "nodemon": "2.0.12",
     "prettier": "2.3.2",
     "supertest": "6.1.3"
+  },
+  "jest": {
+    "clearMocks": true,
+    "testEnvironment": "node",
+    "testResultsProcessor": "jest-sonar-reporter"
   }
 }
