--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-prettier": "3.4.0",
     "jest": "26.6.3",
-    "jest-sonar-reporter": "^2.0.0",
+    "jest-sonar-reporter": "2.0.0",
     "nodemon": "2.0.12",
     "prettier": "2.3.2",
     "supertest": "6.1.3"
