🐳 (frontend): set composer command to yarn dev

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
     build:
       context: ./frontend
       target: deps
+    command: yarn dev
     container_name: be-the-hero_frontend
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:3333
