--- a/.github/workflows/mobile-pr.yml
+++ b/.github/workflows/mobile-pr.yml
@@ -1,36 +1,49 @@
 name: Mobile Pull Request Review
+
 on:
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
     paths:
-    - 'mobile/**'
+      - 'mobile/**'
+
   workflow_dispatch:
+
 jobs:
   publish:
-    name: Install, test and publish a review version
-    runs-on: ubuntu-18.04
+    name: 👷 Install, test and publish a review version
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
         working-directory: mobile
+
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 14.x
-    - uses: expo/expo-github-action@v6
-      with:
-        expo-version: 4.x
-        expo-token: ${{ secrets.EXPO_TOKEN }}
-        expo-cache: true
-    - name: Install dependencies
-      run: yarn install --frozen-lockfile
-    - name: Test
-      run: npx jest --ci --passWithNoTests
-    - name: Publish a review version
-      run: expo publish --release-channel=pr-${{ github.event.number }}
-    - uses: unsplash/comment-on-pr@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        msg: App is ready for review, you can [see it here](https://expo.io/@diegomais/projects/be-the-hero?release-channel=pr-${{ github.event.number }}).
+      - name: 🏗 Set up repository
+        uses: actions/checkout@v2
+
+      - name: 🏗 Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: lts/*
+          cache: yarn
+
+      - name: 🏗 Set up Expo
+        uses: expo/expo-github-action@v7
+        with:
+          expo-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - name: 📦 Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: ✅ Run all tests
+        run: npx jest --ci --passWithNoTests
+
+      - name: 🚀 Publish preview
+        run: expo publish --release-channel=pr-${{ github.event.number }} --non-interactive
+
+      - name: 💬 Comment preview
+        uses: expo/expo-github-action/preview-comment@v7
+        with:
+          channel: pr-${{ github.event.number }}
