--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "expo-constants": "~10.1.3",
     "expo-mail-composer": "~10.1.2",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.5.4",
     "intl": "^1.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
